# irods_resource_plugin_azure_wrapper

./: CMakeLists.txt  README.md
azurewrapper/: libazurewrapper.cpp  libazurewrapper.hpp
